infra/lldap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: lldap
  name: lldap
  namespace: lldap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lldap
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lldap
    spec:
      securityContext:
        runAsUser: 1001
        runAsGroup: 1001
        fsGroup: 1001
      containers:
        - env:
            - name: LLDAP_JWT_SECRET
              valueFrom:
                secretKeyRef:
                  name: lldap-credentials
                  key: jwt-secret
            - name: LLDAP_KEY_SEED
              valueFrom:
                secretKeyRef:
                  name:  lldap-credentials
                  key: key-seed
            - name: LLDAP_LDAP_BASE_DN
              valueFrom:
                secretKeyRef:
                  name: lldap-credentials
                  key: base-dn
            - name: LLDAP_LDAP_USER_PASS
              valueFrom:
                secretKeyRef:
                  name: lldap-credentials
                  key: admin-user-password
            - name: TZ
              value: CET
          image: nitnelave/lldap:2026-03-04-alpine-rootless
          name: lldap
          ports:
            - containerPort: 3890
            - containerPort: 17170
          volumeMounts:
            - mountPath: /data
              name: lldap-data
      restartPolicy: Always
      volumes:
        - name: lldap-data
          persistentVolumeClaim:
            claimName: lldap-data
