infra/lldap/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lldap
  name: lldap
  namespace: lldap
spec:
  ports:
    - name: "ldap"
      port: 3890
      targetPort: 3890
    - name: "http"
      port: 17170
      targetPort: 17170
  selector:
    app: lldap
